app/src/styles.scss
@import '~@angular/material/theming';
// Plus imports for other components in your app.

// Include the common styles for Angular Material. We include this here so that you only
// have to load a single css file for Angular Material in your app.
// **Be sure that you only ever include this mixin once!**
@include mat-core();

// Define an alternate dark theme.
$dark-primary: mat-palette($mat-blue);
$dark-accent:  mat-palette($mat-amber, A200, A100, A400);
$dark-warn:    mat-palette($mat-red);
$dark-theme:   mat-dark-theme((
  color: (
    primary: $dark-primary,
    accent: $dark-accent,
    warn: $dark-warn,
  )
));

@include angular-material-color($dark-theme);

// Fonts
@font-face {
    font-family: chalk;
    src: url(assets/fonts/Chalk-Regular.ttf);
}

body,
html {
    height: 100%;
    font-family: Roboto, "Helvetica Neue", sans-serif;
}
body {
    margin: 0;
    background-color: #303030;
    color: white
}

p {
    font-size: 18px;
}

.header-spacer {
    flex: 1 1 auto;
}

.mat-radio-label-content {
    white-space: normal;
}

mat-tooltip-component > .mat-tooltip {
    font-size: medium !important;
    // word-break: break-all !important;
    white-space: pre-line !important;
    max-width: 800px !important;
}

a {
    color: darkturquoise !important;
    &:visited {
        color: fuchsia !important;
    }
}

.help-icon:hover {
    cursor: pointer;
}

